@@ -1,3 +1,10 @@
+Wed Mar 17 14:24:20 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * ace/Logging_Strategy.cpp:
+        * ace/Logging_Strategy.h:
+          Extended ACE_Logging_Strategy to allow safely change reactor
+          used by this logging strategy.
+
 Wed Mar 17 11:58:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         Committed the changes that I had to revert before x.7.7.
